--- a/config.yml
+++ b/config.yml
@@ -5,7 +5,7 @@ hplc_column:
  - "Showdex KW-405"
  - "Superdex 200 Increase 3.2"
  - "Superose 6 Increase 3.2"
-storage_temperature:
+storage_temp:
   - "room"
   - "-80"
   - "-4"
